2016-08-08  Andre Vehreschild  <vehre@gcc.gnu.org>

	PR fortran/71936
	* gfortran.dg/allocate_with_source_21.f03: New test.

2016-08-08  Andre Vehreschild  <vehre@gcc.gnu.org>

	PR fortran/72698
	* gfortran.dg/allocate_with_source_20.f03: New test.

2016-08-08  Alan Modra  <amodra@gmail.com>

	* gcc.c-torture/compile/pr72802.c: New.

2016-08-08  Andre Vehreschild  <vehre@gcc.gnu.org>

	PR fortran/70524
	* gfortran.dg/dependency_48.f90: New test.

2016-08-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/70040
	* gfortran.dg/pr70040.f90:  New testcase.

2016-08-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/71961
	* gfortran.dg/matmul_10.f90:  New testcase.

2016-08-07  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/tree-ssa/ssa-dom-thread-7.c: Update testcase.

2016-08-07  Jakub Jelinek  <jakub@redhat.com>

	PR c/72816
	* gcc.dg/pr72816.c: New test.

2016-08-06  Jonathan Wakely  <jwakely@redhat.com>

	* g++.dg/conversion/pr16333.C: Adjust dg-error regexp.
	* g++.dg/conversion/pr41426.C: Likewise.
	* g++.dg/conversion/pr66211.C: Likewise.
	* g++.dg/cpp1y/lambda-init9.C: Likewise.
	* g++.dg/init/ref8.C: Likewise.
	* g++.old-deja/g++.law/cvt20.C: Likewise.
	* g++.old-deja/g++.mike/p9732c.C: Likewise.

2016-08-05  Patrick Palka  <ppalka@gcc.gnu.org>

	PR tree-optimization/18046
	* gcc.dg/tree-ssa/vrp105.c: New test.
	* gcc.dg/tree-ssa/vrp106.c: New test.

2016-08-05 Martin Sebor  <msebor@redhat.com>

	* g++.dg/cpp0x/constexpr-cast.C: Avoid assuming (void*)1 is spelled
	1ul in diagnostics.  Remove hyphen from "constant-expression."
	* g++.dg/cpp0x/constexpr-50060.C: Adjust.
	* g++.dg/cpp0x/static_assert3.C: Same.
	* g++.dg/cpp1y/constexpr-throw.C: Same.
	* g++.dg/template/nontype3.C: Same.
	* g++.dg/warn/overflow-warn-1.C: Same.
	* g++.dg/warn/overflow-warn-3.C: Same.
	* g++.dg/warn/overflow-warn-4.C: Same.

2016-08-05  David Malcolm  <dmalcolm@redhat.com>

	* gcc.dg/plugin/diagnostic-test-string-literals-1.c: New file.